Error controller, set options
